# csaszar

./: .gitignore  README.md  balance12.json  cell_search.py  cells7.json  clean7_nosym.json  clean7_nosym_polished.json  clean7_nosym_polished_faces.npy  clean7_nosym_polished_vertices.npy  clean7_nosym_vertices.npy  clean7_z2.json  clean7_z2_polished.json  clean7_z2_polished_faces.npy  clean7_z2_polished_vertices.npy  clean7_z2_vertices.npy  clean_triangles.py  csaszar.json  csaszar.py  csaszar_faces.npy  csaszar_vertices.npy  extract_best.py  filter12.json  filter12_big.json  filter_and_plot.py  find_low_pinch.py  incr7.json  incremental.py  intensive_optimize.py  make_n12_viewer.py  make_viewer.py  n12.json  n12_19.json  n12_19_faces.npy  n12_19_vertices.npy  n12_20.json  n12_20_faces.npy  n12_20_vertices.npy  n12_21.json  n12_21_faces.npy  n12_21_vertices.npy  (+20 more)
rust_search/: Cargo.toml
rust_search/src/: main.rs
rust_search/src/cells2/: arrangement.rs  backtrack.rs  feasibility.rs  main.rs
rust_search/src/cells3/: arrangement.rs  backtrack.rs  feasibility.rs  main.rs
rust_search/src/cells4/: DESIGN.md  arrangement.rs  cell.rs  chirotope.rs  coords.rs  enumerate.rs  gp.rs  main.rs  piercing.rs  split.rs  tet.rs  validate.rs  zone.rs
