[package]
name = "csaszar_cells"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"

[[bin]]
name = "cells"
path = "src/main.rs"

[[bin]]
name = "cells2"
path = "src/cells2/main.rs"

[[bin]]
name = "cells3"
path = "src/cells3/main.rs"

[[bin]]
name = "cells4"
path = "src/cells4/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
